# dream-cad

./: .bandit  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  FIX_DOWNLOAD_HANG.md  PRODUCTION_READY.md  PROGRESS_TRACKING.md  README.md  STORIES.md  debug_tui.py  demo_tui_features.py  dreamcad  dreamcad_cli  dreamcad_cli.py  dreamcad_launcher.py  dreamcad_production.py  dreamcad_production_fixed.py  dreamcad_tui.py  dreamcad_tui_broken.py  dreamcad_tui_new.py  dreamcad_tui_v2.py  fix_production_models.py  generation_queue.json  mvdream.service  predownload_models.py  pyproject.toml  requirements.txt  ruff.toml  strip_all_docs.py  test_tui_manual.md
analytics/: queue_export_20250817_003953.csv  queue_export_20250817_004207.csv  report_20250817_003953.json  report_20250817_004207.json
benchmarks/: benchmark_report.md  rtx3090_results.json
cli/: dream_cli.py  dream_tui.py  dreamcad
configs/: mvdream-sd21.yaml
docs/: 3d_generation_fixes.md  api_reference.md  configuration_examples.md  cuda-setup.md  hardware_requirements.md  licensing.md  model_comparison.md  models.md  performance_tuning.md  production_setup.md  project-structure.md  repository_structure.md  system-specs.md  troubleshooting-diskspace.md  troubleshooting.md  troubleshooting_models.md
dream_cad/: __init__.py
dream_cad/benchmark/: __init__.py  ab_tester.py  benchmark_runner.py  model_benchmark.py  performance_tracker.py  quality_assessor.py  regression_tester.py
dream_cad/cli/: dreamcad_tui.py
dream_cad/monitoring/: __init__.py  cost_analyzer.py  efficiency_reporter.py  model_monitor.py  monitoring_dashboard.py  performance_alerts.py  resource_forecaster.py  usage_analytics.py
dream_cad/queue/: __init__.py  batch_processor.py  job_queue.py  queue_analytics.py  resource_manager.py
dream_cad/ui/: __init__.py  model_selection_ui.py
dreamcad_tui/: __init__.py  app.py
dreamcad_tui/core/: __init__.py  app.py  config.py  generation_worker.py  logger.py  model_detector.py
dreamcad_tui/screens/: __init__.py  dashboard.py  dashboard_new.py  gallery.py  generation_wizard.py  help.py  queue.py  settings.py  simple_wizard.py  wizard.py  wizard_new.py
dreamcad_tui/themes/: dark.py  default.tcss
dreamcad_tui/widgets/: model_card.py
examples/: create_cottage_mesh.py  demo_generation.py  epic_cottage_showcase.py  generate_fantasy_cottage.py  quick_cottage_showcase.py  test_hunyuan_simple.py  test_real_generation.py
mvdream/: __init__.py
old_broken_versions/: dreamcad_final.py.broken  dreamcad_tui_new.py.broken
scripts/: benchmark.py  diagnose.py  download_models.py  generate.py  generate_3d.py  generate_3d_clean.py  generate_3d_real.py  generate_3d_simple.py  generate_mvdream.py  launch_ui.py  production_monitor.py  test_2d_generation.py  test_model_loading.py  test_tui.sh  verify_requirements.py
tests/: README.md  cuda_bandwidth_test.cu  cuda_device_query.cu  test_benchmark.py  test_cuda.py  test_documentation.py  test_dreamcad.py  test_hunyuan3d.py  test_model_architecture.py  test_monitoring.py  test_poe_tasks.py  test_pytorch_cuda_compat.py  test_queue.py  test_report.md  test_scripts_generation.py  test_scripts_production.py  test_scripts_utilities.py  test_stable_fast_3d.py  test_story10_troubleshooting.py  test_story11_benchmarking.py  test_story12_production.py  test_story1_requirements.py  test_story2_cuda_setup.py  test_story3_python_env.py  test_story4_pytorch.py  test_story5_mvdream.py  test_story6_code_quality.py  test_story7_model_download.py  test_story8_2d_generation.py  test_story9_3d_generation.py  test_trellis.py  test_triposr.py  test_tui_e2e.py  test_tui_keyboard.py  test_tui_real_integration.py  test_ui.py
